# Azure-GPT-poc

./: .gitignore  Home.py  README.md  chat.py  chat_terminal.py  example-2022_Annual_Report.txt  extract_lib.py  lib.py  pyproject.toml  requirements.txt
data/: tabula.csv
data/chunks/: augmented_response.txt  chunks_test.txt  completion.txt
fine-tune/: 1.upload-jsonl.py  2.fine-tuning.py  3.fine-tuning-job-details.py  4.list-data.py  5.cancel-job.py  README.md  train_dataset.jsonl
pages/: 1_Prompting.py  2_Basic_rag.py  2_Chat.py  3_Basic_rag.py  3_Query_expansion.py  3_Query_expansion_1 copy.py  3_Query_expansion_1.py  4_Query_expansion_2.py  4_RAG_Simple_query_expansion.py  5_Cross_encoder_re-ranking copy.py  5_Cross_encoder_re-ranking.py  6_Embedding_adapters.py  Simple_rag.py  basic_rag.py  chat.py  process_pdf.py  prompting.py  support_chat.py
tests/pdf-retrieval/: 01-pdfminer_example.py  01-pdfminer_script.py  02-pymupdf_example.py  02-pymupdf_script.py  03-tabula_script.py  03.1-identify_table_pages.py
